# Raymarching-NP

./: .gitignore  CMakeLists.txt  CMakePresets.json
resources/: FragmentShader.frag  VertexShader.vert  build.txt  keyframes.yaml
src/: Base.h  EngineOptions.h  Logger.h  MergeFunctions.h  YAMLConverter.cpp  YAMLConverter.h  main.cpp
src/OpenGL/: OpenGLLog.cpp  OpenGLLog.h  Window.cpp  Window.h
src/buffers/: SSBO.h
src/callbacks/: CallbacksManager.cpp  CallbacksManager.h  InputManager.cpp  InputManager.h
src/camera/: Camera.cpp  Camera.h
src/renderer/: Renderer.cpp  Renderer.h
src/scene/: Cubemap.cpp  Cubemap.h  KeyFrame.cpp  KeyFrame.h  Sphere.h  SphereManager.cpp  SphereManager.h
src/shaders/: Shader.cpp  Shader.h  check_shaders_copied.cmake  copy_shaders.cmake
